[gd_scene load_steps=6 format=2]

[ext_resource path="res://Door.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/door_spritesheet.png-d5a2000d8375a77eb4bad37538d2f8ff.stex"

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 17 )

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41, 35 )

[node name="Door" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 16 )
texture = SubResource( 4 )
vframes = 2
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open = SubResource( 2 )

[node name="DetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2( 16, 34 )
shape = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
